--- a/templates/footer.html
+++ b/templates/footer.html
@@ -1,7 +1,8 @@
-{% block footer%}
-    {% if now %}
+{#{% block footer%}#}
+    {% if True %}
     <p style="font-family: 微软雅黑">现在时刻:{{ now }}</p>
+        <p style="font-family: 微软雅黑">本文取自网络，如有侵权请来信通知下架</p>
     {% else %}
     <p style="font-family: 微软雅黑">本文取自网络，如有侵权请来信通知下架</p>
     {% endif %}
-{% endblock %}
+{#{% endblock %}#}
