--- a/templates/header.html
+++ b/templates/header.html
@@ -1,5 +1,7 @@
 <!DOCTYPE html>
+{% load static %}
 <div class="well">
-    <h1 style="font-family: 微软雅黑;">欢迎光临 文学天地</h1>
+{#    <h1 style="font-family: 微软雅黑;">欢迎光临 文学天地</h1>#}
+    <img src="{% static  "image/url.jpg" %}" alt="" style="height: 100px;width: 100px">
 </div>
 {#<h1 style="font-family: 微软雅黑;">欢迎光临 文学天地</h1>#}
